<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <ImageView
        android:contentDescription="@string/content_description_house"
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/container_components"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintTop_toTopOf="@id/container_components"/>

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="@string/senha_hint"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:text="@string/entrar_btn_text"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        />
    
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_components"/>

    <TextView
        android:id="@+id/txt_tela_cadastro"
        style="@style/TextView"
        android:text="@string/txt_cadastro"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>